tests/integration/fail/regex_wrong_args.kr
# Test regex with wrong argument count
# Expected: Error about wrong argument count

set result to call regex.match with "hello"
print result

